plang/testing/logs/false-incorrect/29/program29.p.p.out
Error at xRJjf (o (Ai2m)) :- ((zuo (A) A), d XK9 U PGJjM).:5:19 error: 
xRJjf (o (Ai2m)) :- ((zuo (A) A), d XK9 U PGJjM).
                  ^
Error at xRJjf (o (Ai2m)) :- ((zuo (A) A), d XK9 U PGJjM).:5:31 error: 
xRJjf (o (Ai2m)) :- ((zuo (A) A), d XK9 U PGJjM).
                              ^
Error at xRJjf (o (Ai2m)) :- ((zuo (A) A), d XK9 U PGJjM).:5:47 error: 
xRJjf (o (Ai2m)) :- ((zuo (A) A), d XK9 U PGJjM).
                                              ^