plang/testing/logs/false-incorrect/29/program29.p.p
sK74 (V1k).
y bZV :- fG (bd).

b j qopU (JOuS) VZ.
xRJjf (o (Ai2m)) :- ((zuo (A) A), d XK9 U PGJjM).

wk cVz9F (iR5P5 (zBoqU (eAA6G (Qf6pX) (pZ6t) H8Xu) hBX VH)) (r10M YFt8c (HmrF) DAakL (e s)).

w F.
ieo.


uf (x4KO) s2AxP :- fsAd KjSqL, qyF; (a HQy (t) jE89 H), x (a4jBB (Gx) i1Y) (Cem); q (Dz) (y6 ev) bIm6p j2; (dJRH (cpOY O (p cfzA (PSU) A1S (Hwc)) (U) (t)) (lBpP ZkpT I6bI (VPhT) G) BQbK5), cp0Fo (i YJl); eIm wocy.

? x3Vc (vtCJL (s6jr O) D Y7a gvR) (GfY9) RQI.